--- a/src/assets/scss/02_molecule/_fieldset.scss
+++ b/src/assets/scss/02_molecule/_fieldset.scss
@@ -6,7 +6,11 @@ fieldset {
     margin: 60px 0;
 
     &.-space {
-        padding: 0 40px;
+        padding: 0;
         margin: 20px 0;
+
+        @include breakpoints("phone") {
+            padding: 0 40px;
+        }
     }
 }
